syntax = "proto3";

package daemons;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/tellor-io/layer/daemons/server/types";

// TokenBridgeService provides methods related to token bridge deposits.
service TokenBridgeService {
  // GetPendingBridgeDeposit returns the oldest pending bridge deposit report data.
  rpc GetPendingDepositReport(GetPendingDepositReportRequest) returns (GetPendingDepositReportResponse) {
    option (google.api.http).get = "/layer/api/get_pending_deposit_report";
  }
}

// GetPendingDepositReportRequest is a request message for getting pending bridge deposits.
message GetPendingDepositReportRequest {}

// GetPendingDepositReportResponse is a response message for getting pending bridge deposits.
message GetPendingDepositReportResponse {
  bytes query_data = 1;
  bytes value = 2;
}
